force-app/main/default/objects/sf_devops__Quality_Gate_Rule_Result__c/sf_devops__Quality_Gate_Rule_Result__c.object-meta.xml
<CustomObject>
    <label>Quality Gate Rule Result</label>
    <nameField>
        <displayFormat>QGRR-{000000}</displayFormat>
        <label>Quality Gate Rule Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Gate Rule Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>