force-app/main/default/objects/sf_devops__Quality_Gate_Rule_Result__c/fields/sf_devops__Test_Suite_Execution__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Test_Suite_Execution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Suite Execution</label>
    <referenceTo>sf_devops__Test_Suite_Execution__c</referenceTo>
    <relationshipLabel>Quality Gate Rule Results</relationshipLabel>
    <relationshipName>Quality_Gate_Rule_Results</relationshipName>
    <type>Lookup</type>
</CustomField>